--- a/index.html
+++ b/index.html
@@ -12,14 +12,127 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h1>Разметка форм</h1>
+    <!-- Выводим имя, телефон и почту -->
 
-    <ul>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
-    </ul>
+    <form class="form js-speaker-form">
+      <div class="form-field">
+        <label for="name">Имя</label>
+        <input
+          type="text"
+          name="name"
+          id="name"
+          placeholder="Максим Максимович"
+          autofocus
+        />
+      </div>
+
+      <div class="form-field">
+        <label for="tel">Телефон</label>
+        <input type="tel" name="tel" id="tel" placeholder="+380" />
+      </div>
+
+      <div class="form-field">
+        <label for="mail">Почта</label>
+        <input type="email" name="mail" id="mail" placeholder="my@mail.com" />
+      </div>
+
+      <!-- Выбираем темы, на которые хотим делать доклад -->
+
+      <div role="group" class="group">
+        <h2 class="group-title">Тема доклада</h2>
+
+        <ul class="topic-options">
+          <li>
+            <input type="checkbox" name="topic" value="html" id="html" />
+            <label for="html">HTML</label>
+          </li>
+
+          <li>
+            <input type="checkbox" name="topic" value="css" id="css" />
+            <label for="css">CSS</label>
+          </li>
+
+          <li>
+            <input type="checkbox" name="topic" value="js" id="js" />
+            <label for="js">JavaScript</label>
+          </li>
+        </ul>
+      </div>
+
+      <!-- Выбираем свой уровень разработчика -->
+
+      <div role="group" class="group">
+        <h2 class="group-title">Уровень вашей экспетизы</h2>
+
+        <ul class="experience-options">
+          <li>
+            <input type="radio" name="experience" value="junior" id="junior" />
+            <label for="junior">Junior</label>
+          </li>
+
+          <li>
+            <input type="radio" name="experience" value="middle" id="middle" />
+            <label for="middle">Middle</label>
+          </li>
+
+          <li>
+            <input type="radio" name="experience" value="senior" id="senior" />
+            <label for="senior">Senior</label>
+          </li>
+        </ul>
+      </div>
+
+      <!-- Выбор времени доклада https://caniuse.com/?search=datetime-local -->
+
+      <div class="form-field">
+        <label for="date">Дата доклада</label>
+        <input type="datetime-local" name="date" id="date" class="date" />
+      </div>
+
+      <!-- Загрузка презентации -->
+
+      <div class="form-field">
+        <label for="document">Загрузить копию доклада в pdf</label>
+        <input type="file" name="document" id="document" />
+      </div>
+
+      <!-- Оставить комментарий -->
+
+      <div class="form-field">
+        <label for="comment">Оставить комментарий</label>
+        <textarea
+          class="comment"
+          name="comment"
+          id="comment"
+          rows="8"
+          placeholder="Уточните детали доклада"
+        ></textarea>
+      </div>
+
+      <!-- Подтверждаем политику конфиденциальности -->
+
+      <div class="form-field policy">
+        <input type="checkbox" name="policy" id="policy" />
+        <label for="policy">Соглашаюсь на все, за еду</label>
+      </div>
+
+      <button type="submit">Оставить заявку</button>
+    </form>
+
+    <script>
+      (() => {
+        document
+          .querySelector(".js-speaker-form")
+          .addEventListener("submit", (e) => {
+            e.preventDefault();
+
+            new FormData(e.currentTarget).forEach((value, name) =>
+              console.log(`${name}: ${value}`)
+            );
+
+            e.currentTarget.reset();
+          });
+      })();
+    </script>
   </body>
 </html>
