--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
     <div class="container">
       <nav class="nav">
         <a href="" class="company-logo">Логотип</a>
+
+        <button type="button" class="menu-button" aria-expanded="false" aria-controls="menu-container" data-menu-button>
+          <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+            <use class="icon-cross" href="./img/sprite.svg#cross"></use>
+            <use class="icon-menu" href="./img/sprite.svg#menu"></use>
+          </svg>
+        </button>
+
+        <div class="menu-container" id="menu-container" data-menu>
+          Контент меню
+        </div>
       </nav>
     </div>
   </div>
@@ -47,6 +58,8 @@
       </div>
     </section>
   </main>
+
+  <script src="./js/menu.js"></script>
 </body>
 
 </html>
