--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Адаптивная графика</title>
+  <link rel="stylesheet" href="./css/common.min.css.map">
 </head>
 
 <body>
-
+  <ol>
+    <li><a href="./01-basic.html">Базовая отзывчивость</a></li>
+    <li><a href="./02-responsive.html">Отзывчивый элемент &lt;img&gt;</a></li>
+    <li><a href="./03-picture.html">Элемент &lt;picture&gt;</a></li>
+    <li><a href="./04-art-direction.html">Кадрирование</a></li>
+  </ol>
 </body>
 
 </html>
