fix adaptive graphics

--- a/03-picture.html
+++ b/03-picture.html
@@ -23,7 +23,7 @@
           ./img/cat-320.jpg 320w,
           ./img/cat-640.jpg 640w,
           ./img/cat-960.jpg 960w
-        " src="./img/cat-320.jpg" alt="Котик" />
+        " src="./img/cat-320.jpg" alt="Котик" sizes="(min-width: 960px) 25vw, (min-width: 576px) 50vw, 100vw" />
   </picture>
 </body>
 
